[project]
name = "ai-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "langchain-chroma>=0.1.0",
    "langgraph>=1.1.6",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "pypdf>=4.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "numpy>=1.26.0",
    "sse-starlette>=3.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ai-interview]
# Redis Configuration
[tool.ai-interview.redis]
host = "localhost"
port = 6379
db = 0
password = ""

# PostgreSQL Configuration
[tool.ai-interview.database]
url = "postgresql+asyncpg://postgres:postgres@localhost:5432/ai_interview"
pool_size = 10
max_overflow = 20
pool_timeout = 30
pool_recycle = 3600

# LLM Configuration (OpenAI-compatible API)
[tool.ai-interview.llm]
api_key = ""
base_url = "https://open.bigmodel.cn/api/paas/v4"
model = "glm-4"
embedding_model = "embedding-2"
max_tokens = 2048
temperature = 0.7

# Vector Store Configuration
[tool.ai-interview.vector]
persist_directory = "./data/vectorstore"
collection_name = "ai_interview_knowledge"

# Server Configuration
[tool.ai-interview.server]
host = "0.0.0.0"
port = 8000
reload = true
workers = 1

# Interview Configuration
[tool.ai-interview.interview]
default_max_series = 5
default_error_threshold = 2
max_followup_depth = 3
session_ttl = 86400

# RAG Configuration
[tool.ai-interview.rag]
top_k = 5
reranker_top_k = 10
similarity_threshold = 0.7
