[project]
name = "ai-interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "langchain-chroma>=0.1.0",
    "langgraph>=1.1.6",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "pypdf>=4.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "numpy>=1.26.0",
    "sse-starlette>=3.3.4",
    "langchain-community>=0.4.1",
    "dashscope>=1.25.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

